# Calendar

./: CMakeLists.txt
res/: qml.qrc
res/qml/: Sidebar.qml  main.qml
src/: data.cpp  data.h  main.cpp
